--- a/src/ui/DoctorFrame.form
+++ b/src/ui/DoctorFrame.form
@@ -80,11 +80,11 @@
                           </Group>
                           <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtDoctor1" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
-                              <Component id="txtDoctor2" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
+                              <Component id="txtPatientId" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
+                              <Component id="txtEncounterno" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                               <Component id="txtTemperature" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                               <Component id="txtBloodPressure" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
-                              <Component id="txtSugarLevel" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
+                              <Component id="txtDiabetes" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                               <Component id="txtWeight" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -92,7 +92,7 @@
                           <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                           <Component id="btnPatient" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="231" max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnSave" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="181" max="32767" attributes="0"/>
@@ -116,12 +116,12 @@
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtDoctor1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtPatientId" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtDoctor2" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtEncounterno" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -136,7 +136,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtSugarLevel" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtDiabetes" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
@@ -153,7 +153,7 @@
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnSave" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -195,14 +195,14 @@
             <Property name="text" type="java.lang.String" value="Patient ID :"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtDoctor1">
+        <Component class="javax.swing.JTextField" name="txtPatientId">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="text" type="java.lang.String" value="Encounter No :"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtDoctor2">
+        <Component class="javax.swing.JTextField" name="txtEncounterno">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
@@ -229,9 +229,9 @@
             <Property name="text" type="java.lang.String" value="Sugar Level :"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtSugarLevel">
+        <Component class="javax.swing.JTextField" name="txtDiabetes">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSugarLevelActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDiabetesActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
@@ -244,13 +244,16 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtWeightActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="btnSave">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="99" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Save"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
